Wow, forgot to update this in git

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -548,3 +548,48 @@ Conclusions: We observed that participation level of practitioners and researche
   year={2015}
 }
 
+@article{Lehman1980,
+  author={Lehman, M.M.},
+  journal={Proceedings of the IEEE}, 
+  title={Programs, life cycles, and laws of software evolution}, 
+  year={1980},
+  volume={68},
+  number={9},
+  pages={1060-1076},
+  doi={10.1109/PROC.1980.11805}
+ }
+
+@inbook{Mens2008,
+	abstract = {The ability to evolve software rapidly and reliably is a major challenge for software engineering. In this introductory chapter we start with a historic overview of the research domain of software evolution. Next, we briefly introduce the important research themes in software evolution, and identify research challenges for the years to come. Finally, we provide a roadmap of the topics treated in this book, and explain how the various chapters are related.},
+	address = {Berlin, Heidelberg},
+	author = {Mens, Tom},
+	booktitle = {Software Evolution},
+	doi = {10.1007/978-3-540-76440-3_1},
+	isbn = {978-3-540-76440-3},
+	pages = {1--11},
+	publisher = {Springer Berlin Heidelberg},
+	title = {Introduction and Roadmap: History and Challenges of Software Evolution},
+	url = {https://doi.org/10.1007/978-3-540-76440-3_1},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-540-76440-3_1}}
+
+
+@misc{planview_agile_testing,
+	author = {Rachaelle Lynn},
+	title = {How the Agile Method Transforms Software Testing},
+	url = {https://www.planview.com/resources/articles/how-agile-method-transforms-software-testing/},
+	bdsk-url-1 = {https://www.planview.com/resources/articles/how-agile-method-transforms-software-testing/}
+}
+
+@article{greca_live_2022,
+author = {Greca, Renan and Miranda, Breno and Bertolino, Antonia},
+title = {State of Practical Applicability of Regression Testing Research: A Live Systematic Literature Review},
+year = {2023},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+issn = {0360-0300},
+doi = {10.1145/3579851},
+abstract = {Context: Software regression testing refers to rerunning test cases after the system under test is modified, ascertaining that the changes have not (re-)introduced failures. Not all researchers’ approaches consider applicability and scalability concerns, and not many have produced an impact in practice. Objective: One goal is to investigate industrial relevance and applicability of proposed approaches. Another is providing a live review, open to continuous updates by the community. Method: A systematic review of regression testing studies that are clearly motivated by or validated against industrial relevance and applicability is conducted. It is complemented by follow-up surveys with authors of the selected papers and 23 practitioners. Results: A set of 79 primary studies published between 2016-2022 is collected and classified according to approaches and metrics. Aspects relative to their relevance and impact are discussed, also based on their authors’ feedback. All the data are made available from the live repository that accompanies the study. Conclusions: While widely motivated by industrial relevance and applicability, not many approaches are evaluated in industrial or large-scale open-source systems, and even fewer approaches have been adopted in practice. Some challenges hindering the implementation of relevant approaches are synthesized, also based on the practitioners’ feedback.},
+journal = {ACM Computing Surveys},
+month = {jan}
+}
