--- a/tables/tab_approaches.tex
+++ b/tables/tab_approaches.tex
@@ -1,23 +1,23 @@
 \newcommand{\rowapproach}[6]{
 #1 & % Name
-\textcolor{olive}{#2} & % TCP
-\textcolor{teal}{#3} & % TCS
-\textcolor{brown}{#4} & % TSR
-\textcolor{purple}{#5} & % TSA
+\textcolor{verdun}{#2} & % TCP
+\textcolor{cyprus}{#3} & % TCS
+\textcolor{derby}{#4} & % TSR
+\textcolor{bossanova}{#5} & % TSA
 #6 % Description
 \\}
 
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{figures/info_approach.png}
+  \includegraphics[width=\linewidth]{figures/info_approach.pdf}
   \caption{Distribution of information approaches.}
   \label{fig:info_approaches}
 \end{figure}
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{figures/alg_approach.png}
+  \includegraphics[width=\linewidth]{figures/alg_approach.pdf}
   \caption{Distribution of algorithm approaches.}
   \label{fig:alg_approaches}
 \end{figure}
@@ -33,10 +33,10 @@
 \begin{tabular}{p{23mm}p{18mm}p{18mm}p{8mm}p{8mm}p{60mm}}
 \toprule
 \textbf{Information} & 
-\textcolor{olive}{\textbf{\tcp}} & 
-\textcolor{teal}{\textbf{\tcs}} & 
-\textcolor{brown}{\textbf{\tsr}} & 
-\textcolor{purple}{\textbf{\tsa}} & 
+\textcolor{verdun}{\textbf{\tcp}} & 
+\textcolor{cyprus}{\textbf{\tcs}} & 
+\textcolor{derby}{\textbf{\tsr}} & 
+\textcolor{bossanova}{\textbf{\tsa}} & 
 \textbf{Description} \\ 
 \midrule
 %\rowcolors{1}{}{gray!10}
@@ -54,10 +54,10 @@
 %\begin{tabular}{p{25mm}p{15mm}p{15mm}p{8mm}p{8mm}p{60mm}}
 %\midrule
 \textbf{Algorithm} & 
-\textcolor{olive}{\textbf{\tcp}} & 
-\textcolor{teal}{\textbf{\tcs}} & 
-\textcolor{brown}{\textbf{\tsr}} & 
-\textcolor{purple}{\textbf{\tsa}} & 
+\textcolor{verdun}{\textbf{\tcp}} & 
+\textcolor{cyprus}{\textbf{\tcs}} & 
+\textcolor{derby}{\textbf{\tsr}} & 
+\textcolor{bossanova}{\textbf{\tsa}} & 
 \textbf{Description} \\ 
 \midrule
 %\rowcolors{1}{}{gray!10}
