--- a/tables/tab_metrics.tex
+++ b/tables/tab_metrics.tex
@@ -1,22 +1,22 @@
 \newcommand{\rowmetric}[6]{
 #1 & % Name
-\textcolor{olive}{#2} & % TCP
-\textcolor{teal}{#3} & % TCS
-\textcolor{brown}{#4} & % TSR
-\textcolor{purple}{#5} & % TSA
+\textcolor{verdun}{#2} & % TCP
+\textcolor{cyprus}{#3} & % TCS
+\textcolor{derby}{#4} & % TSR
+\textcolor{bossanova}{#5} & % TSA
 #6 % Description
 \\}
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{figures/effectiveness_metrics.png}
+  \includegraphics[width=\linewidth]{figures/effectiveness_metrics.pdf}
   \caption{Distribution of effectiveness metrics.}
   \label{fig:effectiveness_metrics}
 \end{figure}
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{figures/efficiency_other_metrics.png}
+  \includegraphics[width=\linewidth]{figures/efficiency_other_metrics.pdf}
   \caption{Distribution of (a) efficiency and (b) other metrics.}
   \label{fig:efficiency_metrics}
 \end{figure}
@@ -28,10 +28,10 @@
 \begin{tabular}{p{23mm}p{18mm}p{18mm}p{8mm}p{8mm}p{60mm}}
 \toprule
 \textbf{Effectiveness} & 
-\textcolor{olive}{\textbf{\tcp}} & 
-\textcolor{teal}{\textbf{\tcs}} & 
-\textcolor{brown}{\textbf{\tsr}} & 
-\textcolor{purple}{\textbf{\tsa}} & 
+\textcolor{verdun}{\textbf{\tcp}} & 
+\textcolor{cyprus}{\textbf{\tcs}} & 
+\textcolor{derby}{\textbf{\tsr}} & 
+\textcolor{bossanova}{\textbf{\tsa}} & 
 \textbf{Description} \\ 
 \midrule
 \showrowcolors
@@ -47,10 +47,10 @@
 %\begin{tabular}{p{25mm}p{15mm}p{15mm}p{8mm}p{8mm}p{60mm}}
 %\toprule
 \textbf{Efficiency} & 
-\textcolor{olive}{\textbf{\tcp}} & 
-\textcolor{teal}{\textbf{\tcs}} & 
-\textcolor{brown}{\textbf{\tsr}} & 
-\textcolor{purple}{\textbf{\tsa}} & 
+\textcolor{verdun}{\textbf{\tcp}} & 
+\textcolor{cyprus}{\textbf{\tcs}} & 
+\textcolor{derby}{\textbf{\tsr}} & 
+\textcolor{bossanova}{\textbf{\tsa}} & 
 \textbf{Description} \\ \midrule
 \showrowcolors
 \input{tables/csv_metrics_efficiency}
@@ -65,10 +65,10 @@
 %\begin{tabular}{p{25mm}p{15mm}p{15mm}p{8mm}p{8mm}p{60mm}}
 %\toprule
 \textbf{Other} & 
-\textcolor{olive}{\textbf{\tcp}} & 
-\textcolor{teal}{\textbf{\tcs}} & 
-\textcolor{brown}{\textbf{\tsr}} & 
-\textcolor{purple}{\textbf{\tsa}} & 
+\textcolor{verdun}{\textbf{\tcp}} & 
+\textcolor{cyprus}{\textbf{\tcs}} & 
+\textcolor{derby}{\textbf{\tsr}} & 
+\textcolor{bossanova}{\textbf{\tsa}} & 
 \textbf{Description} \\ \midrule
 \showrowcolors
 \input{tables/csv_metrics_other}
