--- a/tables/tab_relevance.tex
+++ b/tables/tab_relevance.tex
@@ -1,11 +1,11 @@
 \newcommand{\rowrelevance}[7]{
 \citetalias{#1} & % Citation alias
-{\color{olive} #2} & % Ind mot
-{\color{teal} #3} & % Ind eval
-{\color{brown} #4} & % Ind auth
-{\color{purple} #5} & % Prac feed
-{\color{orange} #6} & % Avail tool
-{\color{cyan} #7}   % In practice 
+{\color{verdun} #2} & % Ind mot
+{\color{cyprus} #3} & % Ind eval
+{\color{derby} #4} & % Ind auth
+{\color{bossanova} #5} & % Prac feed
+{\color{diesel} #6} & % Avail tool
+{\color{midnight} #7}   % In practice 
 }
 
 %\newcommand{\rotatedheaderfourtyfive}[2] {
@@ -14,12 +14,12 @@
 
 \newcommand{\relevanceheader} {
 	\textbf{ID} & 
-	\rotatedheader{olive}{Ind. Mot.} &
-	\rotatedheader{teal}{Ind. Eval.} &
-	\rotatedheader{brown}{Ind. Auth.} &
-	\rotatedheader{purple}{Prac. Feed.} &
-	\rotatedheader{orange}{Avail. Tool} &
-	\rotatedheader{cyan}{In Practice}
+	\rotatedheader{verdun}{Ind. Mot.} &
+	\rotatedheader{cyprus}{Ind. Eval.} &
+	\rotatedheader{derby}{Ind. Auth.} &
+	\rotatedheader{bossanova}{Prac. Feed.} &
+	\rotatedheader{diesel}{Avail. Tool} &
+	\rotatedheader{midnight}{In Practice}
 }
 
 %\begin{center}
@@ -78,12 +78,12 @@
 \end{center}
 \scriptsize 
 \vspace{-9pt}
-{\color{olive} Ind. Mot.}: Industrial Motivation.
-{\color{teal} Ind. Eval.}: Industrial Evaluation.
-{\color{brown} Ind. Auth.}: Industrial Author(s).
-{\color{purple} Prac. Feed.}: Practitioner Feedback.
-{\color{orange} Avail. Tool}: Available Tool.
-{\color{cyan} In Practice}: Put into Practice.
+\textbf{\color{verdun} Ind. Mot.}: Industrial Motivation.
+\textbf{\color{cyprus} Ind. Eval.}: Industrial Evaluation.
+\textbf{\color{derby} Ind. Auth.}: Industrial Author(s).
+\textbf{\color{bossanova} Prac. Feed.}: Practitioner Feedback.
+\textbf{\color{diesel} Avail. Tool}: Available Tool.
+\textbf{\color{midnight} In Practice}: Put into Practice.
 %
 A half-filled circle indicates a partially satisfied property. For example, a paper that provides its dataset but not its source code, or one that has some indication of having been implemented without explicitly stating so.
 \caption{Relevance properties found in the papers.}
