--- a/tables/tab_selected.tex
+++ b/tables/tab_selected.tex
@@ -4,10 +4,10 @@
 \scriptsize \citeyear{#1} & % Citation year
 \scriptsize \nohyphens{\citet{#1}} & % Authors
 \scriptsize #2 & % Full title
-\scriptsize {\color{olive} #3} & % TCP
-\scriptsize {\color{teal} #4} & % TCS
-\scriptsize {\color{brown} #5} & % TSR
-\scriptsize {\color{purple} #6} % TSA
+\scriptsize {\color{verdun} #3} & % TCP
+\scriptsize {\color{cyprus} #4} & % TCS
+\scriptsize {\color{derby} #5} & % TSR
+\scriptsize {\color{bossanova} #6} % TSA
 \tabularnewline }
 
 %\begin{table}[]
